<resources>
    <string name="app_name">ProjectApp</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="Register_as_a_Landlord"><u>Register as a Landlord</u>.</string>
    <string name="Register_as_a_Tenant"><u>Register as a Tenant</u>.</string>
    <string name="title_activity_nav_tenant">Nav_tenant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_searchhome">Search Home</string>
    <string name="menu_postmyproperty">Post My Property</string>
    <string name="menu_myshortlisted">My Shortlisted</string>
    <string name="menu_payrent">Pay Rent</string>
    <string name="menu_rentreceipts">Rent Receipts</string>
    <string name="menu_packersmovers">Packers &amp; Movers</string>
    <string name="menu_referearn">Refer &amp; Earn</string>
    <string name="menu_eagreement">e-Agreement</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_logout">Logout</string>

    <string name="home_second">Home Second</string>



        <string name="nameerror">Enter Valid Name</string>
        <string name="emailerror">Enter Valid Email Id</string>
        <string name="passworderror">Password contain more than 8 characters</string>
        <string name="mobileerror">Enter Valid Mobile Number</string>

    <string name="s_pref_file">com.example.project.sh_preference_file</string>
    <string name="s_pref_login_status">com.example.sh_preference_login_status</string>
    <string name="s_pref_name">sh_preference_name</string>
    <string name="s_pref_email">sh_preference_email</string>
    <string name="s_pref_date">sh_preference_date</string>
</resources>
